src/core/Claroline/PluginBundle/Tests/stub/plugin/extension/Valid/Minimal/ValidMinimal.php
<?php

namespace Valid\Minimal;

use Claroline\PluginBundle\AbstractType\ClarolineExtension;

class ValidMinimal extends ClarolineExtension
{  
}