src/core/Claroline/PluginBundle/Tests/stub/plugin/extension/Invalid/UnexpectedRoutingPrefix2/InvalidUnexpectedRoutingPrefix2.php
<?php

namespace Invalid\UnexpectedRoutingPrefix2;

use Claroline\PluginBundle\AbstractType\ClarolineExtension;

class InvalidUnexpectedRoutingPrefix2 extends ClarolineExtension
{
    public function getRoutingPrefix()
    {
        return '';
    }
}